kubernetes/yata-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: yata-db
  name: yata-db
spec:
  serviceName: yata-db-svc
  replicas: 1
  strategy:
  selector:
    matchLabels:
      app: yata-db
  template:
    metadata:
      labels:
        app: yata-db
    spec:
      containers:
      - name: postgres
        image: postgres:12
