kubernetes/yata-db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: yata-db-svc
  labels:
    app: yata-db-svc
spec:
  clusterIP: None
  selector:
    app: yata-db
