kubernetes/yata-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yata-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
      - "yata42.online"
      secretName: yata-tls
  rules:
    - host: "yata42.online"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: yata-svc
                port:
                  number: 80
